load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "delete.go",
        "diff.go",
        "env.go",
        "init.go",
        "prototype.go",
        "root.go",
        "show.go",
        "update.go",
        "validate.go",
        "version.go",
    ],
    importpath = "github.com/ksonnet/kubecfg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//metadata:go_default_library",
        "//pkg/kubecfg:go_default_library",
        "//prototype:go_default_library",
        "//prototype/snippet:go_default_library",
        "//template:go_default_library",
        "//utils:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/github.com/strickyak/jsonnet_cgo:go_default_library",
        "//vendor/golang.org/x/crypto/ssh/terminal:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//vendor/k8s.io/client-go/discovery:go_default_library",
        "//vendor/k8s.io/client-go/dynamic:go_default_library",
        "//vendor/k8s.io/client-go/pkg/version:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd:go_default_library",
        "//vendor/k8s.io/client-go/tools/clientcmd/api:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "show_test.go",
        "version_test.go",
    ],
    importpath = "github.com/ksonnet/kubecfg/cmd",
    library = ":go_default_library",
)
