load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "index.go",
        "interface.go",
        "specification.go",
        "systemPrototypes.go",
    ],
    importpath = "github.com/ksonnet/kubecfg/prototype",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["prototype_test.go"],
    importpath = "github.com/ksonnet/kubecfg/prototype",
    library = ":go_default_library",
)
